fix homepage's style bugs on IE6 and IE7
git-svn-id: http://tongshare.googlecode.com/svn/branches/branch_reminder/tongshare@408 c2c84ded-d1d5-93fd-fce7-e2d88d762596

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -93,6 +93,11 @@ root {
     float: left;
 }
 
+#login_button {
+    display: block;
+    border: none;
+    padding: 1px 13px 3px 13px;
+}
 .noticebar {
     margin-left: 50px;
 }
