--- a/public/stylesheets/biz/style.css
+++ b/public/stylesheets/biz/style.css
@@ -6,14 +6,14 @@ body {background:#fff;font-family:Arial,Helvetica,sans-serif;font-size:100%;line
 html {min-width:1000px}
 html,body {height:100%}
 /* Global Structure */
-#main {margin:0 auto;width:1000px;font-size:.814em}
+#main {position: relative; margin:0 auto;width:1000px;font-size:.814em}
 /* Header */
 header {height:100px;position:relative}
 /* Content */
 section#content {width:700px;float:left}
 .inner_copy, .inner_copy a {border:0;float:left;background:#fff;color:#f00;width:50% !important;line-height:10px;font-size:10px;margin:-120% 0 0 0;overflow:hidden;padding:0}
 /* Sidebar */
-aside {float:left;width:300px}
+aside {position: absolute; left: 700px; top: 100px; ;width:300px}
 /* Footer */
 footer {text-align:center;height:111px;line-height:1.538em}
 /* Left & Right alignment */
